<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_menu_session"
            android:iconTint="@color/colorPrimaryDark"
            android:iconTintMode="src_over"
            android:title="@string/menu_status"
            tools:ignore="UnusedAttribute" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_browse"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_monitoring"
            android:icon="@drawable/ic_menu_monitor"
            android:title="@string/menu_monitoring" />
        <item
            android:id="@+id/nav_list_subscription"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list_subscription" />
    </group>

    <item
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
