<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/insert_read_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserted_node"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.example.hello.ui.widget.ClearEditText
        android:id="@+id/edtNamespace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_clear"
        android:ems="10"
        android:hint="@string/namespace"
        android:inputType="number"
        android:textAlignment="center" />

    <com.example.hello.ui.widget.ClearEditText
        android:id="@+id/edtNodeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_clear"
        android:ems="10"
        android:hint="@string/node_index"
        android:inputType="text"
        android:textAlignment="center" />

    <com.example.hello.ui.widget.ClearEditText
        android:id="@+id/edtMaxAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_clear"
        android:ems="10"
        android:hint="@string/max_age"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgrouptimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server" />

        <RadioButton
            android:id="@+id/rdSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/source" />

        <RadioButton
            android:id="@+id/rdBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/both" />

        <RadioButton
            android:id="@+id/rdNeither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neither" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOkRead"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dialog"
        android:text="@android:string/ok" />
</LinearLayout>