<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_moni_item_data"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namespace"
                android:textAlignment="center" />

            <com.example.hello.ui.widget.ClearEditText
                android:id="@+id/edtMonitoredNamespace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_clear"
                android:ems="10"
                android:hint="@string/namespace"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/node_index"
                android:textAlignment="center" />

            <com.example.hello.ui.widget.ClearEditText
                android:id="@+id/edtMonitoredNodeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_clear"
                android:ems="10"
                android:hint="@string/node_index"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sampling_interval"
                android:textAlignment="center" />

            <com.example.hello.ui.widget.ClearEditText
                android:id="@+id/edtSamplingInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_clear"
                android:ems="10"
                android:hint="@string/sampling_interval"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queue_size"
                android:textAlignment="center" />

            <com.example.hello.ui.widget.ClearEditText
                android:id="@+id/edtQueueSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_clear"
                android:ems="10"
                android:hint="@string/queue_size"
                android:inputType="number"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkDiscardOldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/discard_oldest" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/rdgroupDeadband"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rdAbsolute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/absolute_filter"
                    android:textAlignment="viewStart" />

                <RadioButton
                    android:id="@+id/rdPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/percentage_filter" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadband"
                android:textAlignment="center" />

            <com.example.hello.ui.widget.ClearEditText
                android:id="@+id/edtValDeadband"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_clear"
                android:ems="10"
                android:hint="@string/deadband"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timestamp_type"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnOkMonitoredItem"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_dialog"
                android:text="@android:string/ok" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>