<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/insert_alarm_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_value"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserted_critical_value"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.example.hello.ui.widget.ClearEditText
        android:id="@+id/edtMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_clear"
        android:ems="10"
        android:hint="@string/max_value"
        android:inputType="number"
        android:textAlignment="center" />

    <com.example.hello.ui.widget.ClearEditText
        android:id="@+id/edtMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_clear"
        android:ems="10"
        android:hint="@string/min_value"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnOkAlarm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dialog"
        android:text="@android:string/ok" />
</LinearLayout>