<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connect_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".ui.activity.ConnectingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/connect_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_appbar"
        android:layout_centerHorizontal="true"
        android:text="@string/insertAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.example.hello.ui.widget.HistoryEditText
        android:id="@+id/edtURL"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/ic_clear"
        android:hint="@string/exampleUrl"
        android:textAlignment="center"
        app:clear_text="@string/clearText"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtURL"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"
        android:drawableStart="@drawable/ic_search"
        android:padding="8dp"
        android:text="@string/find_nodes" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConnect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/endpointsList"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/connect_anim_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:lottie_autoPlay="false"
        app:lottie_fileName="connecting_anim.json"
        app:lottie_loop="true"
        app:lottie_repeatMode="reverse" />

    <ListView
        android:id="@+id/ListEndpoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_margin="30dp"
        android:background="@drawable/infobox_bg"
        android:elevation="5dp"
        android:scrollbars="vertical" />

</RelativeLayout>